--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E201'
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Participation, German'
+- GITenberg
 title: Die Hessen und die andern deutschen Hilfstruppen im Kriege gross-britanniens
   gegen Amerika, 1776-1783
 url: http://www.gutenberg.org/ebooks/44049
